==============================================================
1.0.1 [2022/01/31]
==============================================================
 - removed field prefix (mamba/goffy)
 - removed table name from functions (mamba/goffy)
 - usage of singular table names (mamba/goffy)
 - updated mail notification system (goffy)
 - added verification for registrations (goffy)
 - added js in account form (goffy)
 - modification of textblock usage (goffy)
 - added tablesorter (mamba)
 - added notify all participants (goffy)
 - added google maps (goffy)
 - added js for expand/collapse description (goffy)
 - added html support for notifications (goffy)
 - send no notifications to myself (goffy)
 - added identifier for events (goffy)
 - multiple selections for checkbox and combobox (goffy)
 - theme xswatch4_wge (goffy)
 - replacing includeq and foreachq (mamba/goffy)
 - fixed bugs (cesagonchu/goffy)
 - removed renaming upload folder when uninstalling (cesagonchu/goffy)
 - fixed bug of display result selectbox (goffy)
 
==============================================================
1.0.0 [2022/01/04 9:28:23]
==============================================================
 - Original release wgevents (Goffy - Wedega)