@@ -21,6 +21,7 @@
  - fixed bugs (cesagonchu/goffy)
  - removed renaming upload folder when uninstalling (cesagonchu/goffy)
  - fixed bug of display result selectbox (goffy)
+ - added payment info for events (goffy)
  
 ==============================================================
 1.0.0 [2022/01/04 9:28:23]
